--- a/client/partials/head.html
+++ b/client/partials/head.html
@@ -2,5 +2,5 @@
 	<meta charset="UTF-8">
 	<title>Camagru</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Pacifico" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../client/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/client/css/style.css">
 </head>
