--- a/client/css/style.css
+++ b/client/css/style.css
@@ -104,10 +104,10 @@ input {
 }
 
 .connection-block a:link, a:visited {
-    color: white;
+	color: white;
 	padding: 28px 20px;
-    text-decoration: none;
-    display: inline-block;
+	text-decoration: none;
+	display: inline-block;
 }
 
 .connection-block a:hover, a:active {
@@ -136,6 +136,13 @@ input {
 
 #canvas {
 	display: none;
+}
+
+.form a {
+	color: black;
+	text-decoration: none;
+	font-size: 80%;
+	margin-right: 5px;
 }
 
 .output {
