--- a/client/css/style.css
+++ b/client/css/style.css
@@ -82,9 +82,11 @@ input {
 }
 
 .button {
+	cursor: pointer;
 	background-color: #4CAF50;
-	color: #fff;
+	color: white;
 	border: 0;
+	width: 100%;
 }
 
 .form h3 {
@@ -111,7 +113,7 @@ input {
 	display: inline-block;
 }
 
-.connection-block a:hover, a:active {
+.connection-block a:hover {
 	background-color: grey;
 }
 
@@ -134,6 +136,7 @@ input {
 	margin: auto;
 	font-size: 15px;
 	color: white;
+	cursor: pointer;
 }
 
 .red-background {
@@ -176,6 +179,7 @@ input {
 	border-radius: 15px;
 	border: 1px solid #B7BFBF;
 	background-color: white;
+	cursor: pointer;
 }
 
 .sticker-active {
@@ -203,17 +207,14 @@ input {
 #gallery {
 	text-align: center;
 	width: 100%;
-	padding: 1%;
+	padding: 2.5%;
 }
 
 #gallery-photos {
 	display: inline-block;
 	margin: 0.5% 0.5%;
-	border: 1px solid #B7BFBF;
-	background: white;
-	border-radius: 8px;
 	padding: 0.1%;
-	width: 250px;
+	width: 300px;
 }
 
 #form-upload {
@@ -223,14 +224,15 @@ input {
 #form-submit {
 	color: white;
 	background-color: red;
+	cursor: pointer;
 }
 
 #shot-method {
 	display: block;
 	background: #E7E7E7;
 	border: 1px solid #B7BFBF;
-	margin: 2% auto;
-	width: 30%;
+	margin: 3% auto;
+	width: 35%;
 }
 
 #shot-method img:hover {
@@ -247,11 +249,130 @@ input {
 
 figcaption {
 	color: black;
-	font-family: 'Pacifico', cursive;
+	text-decoration: none;
+	color: black;
+	font-family: Gill Sans, Verdana;
+	font-size: 10px;
+	line-height: 15px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold;
+	margin: 15px auto;
 }
 
 figure {
-	width: 30%;
+	width: 35%;
 	display: inline-block;
 	text-decoration: none;
+}
+
+.pagination {
+	width: 80px;
+	padding: 10px;
+	display: inline-block;
+	border: 1px solid white;
+	font-family: Gill Sans, Verdana;
+	font-size: 13px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold;
+	background: #4CAF50;
+	margin: 0.5% auto;
+	cursor: pointer;
+}
+
+#signature {
+	text-decoration: none;
+	color: black;
+	font-family: Gill Sans, Verdana;
+	font-size: 10px;
+	line-height: 15px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold;
+	display: block;
+	text-align: right;
+}
+
+#gallery-photos-block {
+	margin: 10px;
+	display: inline-block;
+	background: white;
+}
+
+#page-number {
+	margin: 2% 0.5% auto;
+	display: block;
+	font-family: Gill Sans, Verdana;
+	letter-spacing: 0.5px;
+	padding: 5px;
+}
+
+#image-viewer {
+	width: 30%;
+	min-width: 300px;
+	margin: 20px auto;
+	padding: 10px;
+	border: 1px solid #B7BFBF;
+	background: #E7E7E7;
+	border-radius: 3px;
+}
+
+#comment-block {
+/*   overflow: auto;
+	max-height: 350px; */
+	width: 30%;
+	min-width: 300px;
+	margin: -15px auto;
+	padding: 15px;
+	border: 1px solid #B7BFBF;
+	background: #E7E7E7;
+	border-radius: 3px;
+}
+
+.comment-input {
+	display: block;
+	width: 100%;
+	background: white;
+	height: 50px;
+	margin: 10px 0 0 0;
+	padding: 8px 8px;
+}
+
+.comment {
+	display: block;
+	background: white;
+	padding: 6px 8px;
+	border: 1px solid black;
+	border-radius: 8px;
+}
+
+.comment-author {
+	color: black;
+	font-family: Gill Sans, Verdana;
+	font-size: 10px;
+	line-height: 20px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold;
+	display: inline-block;
+}
+
+.line-separator {
+	width: 100%;
+	margin: 15px auto;
+	background: #717171;
+	border-bottom: 1px solid black;
+}
+
+.delete-comment {
+	width: 13px;
+	float: right;
+	border: 0;
+	margin: 5px;
+}
+
+#photo-big {
+	width: 100%;
+	/* 	min-width: 80%; */
 }
