Done: Deleting photos. Done: Own page and gallery. Done: User can modify his username, email and password. TODO: Like system. TODO: User is warned by email when a comment is posted on one of his pics. (IMPORTANT: this can be disabled) TODO: Thumbnails of all pictures previously taken in the right side.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -328,7 +328,6 @@ figure {
 }
 
 .comment {
-/* 	overflow: auto; */
 	display: block;
 	background: white;
 	padding: 6px 8px;
@@ -357,9 +356,15 @@ figure {
 	border-bottom: 1px solid black;
 }
 
-.delete-comment {
+.delete-comment-button {
 	display: inline-block;
 	width: 13px;
+	border: 0;
+	float: right;
+}
+
+#delete-photo-button {
+	width: 25px;
 	border: 0;
 	float: right;
 }
@@ -381,6 +386,7 @@ figure {
 	display: inline-block;
 	width: 20%;
 	min-width: 200px;
+	border: 1px solid #B7BFBF;
 }
 
 #wrapper-comment-input {
