--- a/client/css/style.css
+++ b/client/css/style.css
@@ -159,7 +159,7 @@ input {
 	margin-right: 5px;
 }
 
-.image-box {
+.sticker-box {
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
@@ -169,13 +169,13 @@ input {
 	background: #E7E7E7;
 }
 
-.image-box .image img {
+.sticker-box .image img {
 	margin: 0.5%;
 	padding: 5%;
 	width: 150px;
 }
 
-.image-box .image img:hover, .image-box .image img:active {
+.sticker-box .image img:hover, .sticker-box .image img:active {
 	border-radius: 15px;
 	border: 1px solid #B7BFBF;
 	background-color: white;
@@ -266,6 +266,13 @@ figure {
 	text-decoration: none;
 }
 
+ul {
+	margin: 2% auto;
+	list-style: square outside none;
+  
+	font-size: 150%;
+}
+
 .pagination {
 	width: 80px;
 	padding: 10px;
@@ -281,7 +288,7 @@ figure {
 	cursor: pointer;
 }
 
-#signature {
+#signature-gallery {
   color: #222;
   text-shadow: 0px 2px 3px #555;
 	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
@@ -289,6 +296,16 @@ figure {
 	line-height: 18px;
 	letter-spacing: 5px;
 	display: block;
+}
+
+#signature {
+  color: #222;
+  text-shadow: 0px 2px 3px #555;
+	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+	font-size: 100%;
+	line-height: 18px;
+	letter-spacing: 5px;
+	display: inline-block;
 }
 
 #gallery-photos-block {
@@ -363,10 +380,42 @@ figure {
 	float: right;
 }
 
+#last-photos {
+	display: block;
+	width: 100%;
+	margin: 5px auto;
+	padding: 1px;
+}
+
+.wrapper-last-photos {
+	overflow: auto;
+	max-height: 80vh;
+	display: inline-block;
+	vertical-align: top;
+	position: relative;
+	margin: 1% 0.5%;
+	padding: 0.5%;
+	border: 1px solid #B7BFBF;
+	background: #E7E7E7;
+	width: 15%;
+}
+
 #delete-photo-button {
 	width: 25px;
 	border: 0;
 	float: right;
+}
+
+#like-button, #like-inactive {
+	width: 23px;
+	border: 0;
+	float: left;
+}
+
+#like-counter {
+	margin: 2px 5px;
+	float: left;
+	display: inline-block;
 }
 
 #wrapper-image-viewer {
@@ -395,7 +444,6 @@ figure {
 	padding: 5px;
 	border: 1px solid #B7BFBF;
 	border-top: none;
-	
 }
 
 #photo-big {
