--- a/client/css/style.css
+++ b/client/css/style.css
@@ -23,21 +23,71 @@ body {
 	color: #13140F;
 }
 
-header {
-	width: auto;
-	height: 75px;
+header h1 {
+	float: left;
+	margin: auto 10px 10px;
+	font-family: 'Pacifico', cursive;
+	font-size: 250%;
+	color: #fff;
+	display: block;
+}
+
+.topnav {
+	overflow: hidden;
 	background-color: #13140F;
 }
 
-header h1 {
-	position: absolute;
-	margin: 0;
-	padding: 0;
-	top: 0;
-	left: 10px;
-	font-family: 'Pacifico', cursive;
-	font-size: 220%;
-	color: #fff;
+.topnav a {
+	float: right;
+	display: block;
+	color: #f2f2f2;
+	padding: 29px 20px;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.active {
+	background-color: #4CAF50;
+	color: white;
+}
+
+.topnav .icon {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {
+		display: none;
+	}
+
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {
+		position: relative;
+	}
+
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
+
 }
 
 footer {
@@ -54,11 +104,14 @@ footer {
 }
 
 .form {
+	display: block;
 	width: 40%;
+	min-width: 250px;
 	margin: 30px auto;
 	padding: 10px;
 	border: 1px solid #B7BFBF;
 	background: #E7E7E7;
+	overflow: auto;
 }
 
 form label, form input, form button {
@@ -102,38 +155,27 @@ input {
 	font-size: 95%;
 }
 
-.connection-block {
-	text-align: right;
-}
-
-.connection-block a:link, a:visited {
-	color: white;
-	padding: 28px 1%;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.connection-block a:hover {
-	background-color: grey;
-}
-
 .center {
 	text-align: center;
 }
 
 .webcam {
 	position: relative;
-	width: 505px;
+	width: 730px;
 	display: inline-block;
 	margin: 1% auto;
-	padding: 0.5%;
 	border: 1px solid #B7BFBF;
 	background: #E7E7E7;
 }
 
+#video {
+	width: 100%;
+	height: 100%;
+}
+
 .webcam-button {
 	display: inline-block;
-	margin: auto;
+	margin: 5px auto;
 	font-size: 15px;
 	color: white;
 	cursor: pointer;
@@ -160,6 +202,7 @@ input {
 }
 
 .sticker-box {
+	width: 200px;
 	display: inline-block;
 	vertical-align: top;
 	position: relative;
@@ -172,7 +215,7 @@ input {
 .sticker-box .image img {
 	margin: 0.5%;
 	padding: 5%;
-	width: 150px;
+	width: 100%;
 }
 
 .sticker-box .image img:hover, .sticker-box .image img:active {
@@ -190,16 +233,13 @@ input {
 
 #overlay {
 	position: absolute;
-	width: 480px;
-	height: 360px;
+	width: 100%;
 }
 
 .photo {
-	position: relative;
-	max-width: 505px;
 	margin: 1% auto;
-	padding: 0.5%;
-	border: 1px solid #B7BFBF;
+	position: relative;
+	width: 730px;
 	background: #E7E7E7;
 	display: none;
 }
@@ -233,6 +273,7 @@ input {
 	border: 1px solid #B7BFBF;
 	margin: 3% auto;
 	width: 35%;
+	min-width: 250px;
 }
 
 #shot-method img:hover {
@@ -269,7 +310,6 @@ figure {
 ul {
 	margin: 2% auto;
 	list-style: square outside none;
-  
 	font-size: 150%;
 }
 
@@ -280,17 +320,18 @@ ul {
 	border: 1px solid white;
 	font-family: Gill Sans, Verdana;
 	font-size: 13px;
+	color: white;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-weight: bold;
-	background: #4CAF50;
+	background: black;
 	margin: 0.5% auto;
 	cursor: pointer;
 }
 
 #signature-gallery {
-  color: #222;
-  text-shadow: 0px 2px 3px #555;
+	color: #222;
+	text-shadow: 0px 2px 3px #555;
 	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 	font-size: 100%;
 	line-height: 18px;
@@ -299,8 +340,8 @@ ul {
 }
 
 #signature {
-  color: #222;
-  text-shadow: 0px 2px 3px #555;
+	color: #222;
+	text-shadow: 0px 2px 3px #555;
 	font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 	font-size: 100%;
 	line-height: 18px;
@@ -335,7 +376,7 @@ ul {
 	border-bottom: none;
 }
 
-.comment-input {	
+.comment-input {
 	display: block;
 	width: 100%;
 	background: white;
@@ -419,7 +460,7 @@ ul {
 }
 
 #wrapper-image-viewer {
-	width: 30%;
+	width: 700px;
 	min-width: 300px;
 	margin: 20px auto;
 	padding: 5px;
@@ -446,6 +487,61 @@ ul {
 	border-top: none;
 }
 
+#photo {
+	width: 100%;
+}
+
 #photo-big {
 	width: 100%;
+}
+
+.twitter-share-button {
+  float: right;
+	margin: 2px 5px;
+}
+
+@media screen and (max-width: 1280px) {
+	.webcam, .photo, #photo, #overlay {
+		width: 500px;
+	}
+}
+
+@media screen and (max-width: 880px) {
+	.webcam {
+		display: block;
+	}
+	
+	.webcam, .photo, #photo, #overlay {
+		width: 95%;
+		margin: 10px auto;
+	}
+	
+  .sticker-box {
+		display: block;
+		width: 95%;
+		margin: 10px auto;
+		overflow: auto;
+	}
+	
+	#sticker {
+		width: 32%;
+		display: inline-block;
+	}
+	
+	.wrapper-last-photos {
+		display: none;
+	}
+	
+	#wrapper-comment-block {
+		margin: auto;
+		display: block;
+		width: 100%;
+		border: none;
+	}
+	
+	#wrapper-image-viewer {
+		width: 100%;
+		margin: auto;
+		border: none;
+	}
 }
